--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -12,7 +12,7 @@
     <ion-list>
 
       <ion-item>
-        <ion-label fixed>{{ 'NAME' | translate }}</ion-label>
+        <ion-label fixed>Имя</ion-label>
         <ion-input type="text" [(ngModel)]="account.name" name="name"></ion-input>
       </ion-item>
 
