--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -35,7 +35,7 @@
   </form>
 
   <div padding>
-    <button ion-button color="primary" clear (click)="signup()" >Sign Up</button>
-    <button ion-button color="primary" clear (click)="signup()" >Forgot Password</button>
+    <button ion-button color="primary" clear (click)="signup()" >Регистрация</button>
+    <button ion-button color="primary" clear (click)="signup()" >Забыли пароль?</button>
   </div>
 </ion-content>
