main layout implementation

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -21,6 +21,11 @@
         <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
       </ion-item>
 
+      <ion-item>
+        <ion-label fixed>Организация</ion-label>
+        <ion-input type="text" [(ngModel)]="account.organization" name="organization"></ion-input>
+      </ion-item>
+
       <!--
       Want to add a Username? Here you go:
 
