--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -8,7 +8,6 @@
 
 <ion-content padding>
   <p>
-    This is a perfect starting point for a page with primarily text content. The
-    body is padded nicely and ready for prose.
+   Добро пожаловать на страницу информации
   </p>
 </ion-content>
