--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,7 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{'SIGNUP' | translate}}</ion-title>
+    <ion-title>
+      {{pageTitle}}
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -49,18 +51,22 @@
         <button class="detect-position" (click)="detectPosition()" ion-button color="secondary" block>Определить местоположение</button>
       </ion-item>
 
-      <ion-item>
+      <ion-item *ngIf="!isSettingsPage">
         <ion-label fixed>{{'PASSWORD' | translate}}</ion-label>
         <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
       </ion-item>
 
-      <ion-item>
+      <ion-item *ngIf="!isSettingsPage">
         <ion-label fixed>Подтвердить Пароль</ion-label>
         <ion-input type="password" [(ngModel)]="account.confirmPassword" name="confirmPassword"></ion-input>
       </ion-item>
 
-      <div padding>
+      <div padding *ngIf="!isSettingsPage">
         <button  (click)="doSignup()" ion-button color="primary" block>{{'SIGNUP' | translate}}</button>
+      </div>
+
+      <div padding *ngIf="isSettingsPage">
+        <button  (click)="doSignup()" ion-button color="primary" block>Сохранить настройки</button>
       </div>
 
     </ion-list>
