logout logic implementation

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -4,7 +4,7 @@
     <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
 
     <ion-buttons end>
-      <button ion-button icon-only (click)="addItem()">
+      <button ion-button icon-only (click)="logout()">
         Выйти
       </button>
     </ion-buttons>
